Fix navigator scroll bug; default overflow is visible

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -15,7 +15,7 @@
     height: 100vh;
     width: 4px;
     background-color: #363F48;
-    z-index: 1000;
+    z-index: 100;
 }
 
 #projects-navigator > .round-button {
