--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ p {
 }
 
 .round-button:hover {
-    transform: scale(1.1);
+    transform: scale(0.9);
     cursor: pointer;
 }
   
